# data_structures

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  btree.c  list.c  list.h  result_example.c  tree.h
src/utils/: panic.c  panic.h  result.h  result_types.c  result_types.h
tests/: CMakeLists.txt  test_bt.c  test_list.c
tests/utils/: asserts.c  asserts.h
